/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.datastore;

option java_package = "com.dremio.datastore";
option optimize_for = SPEED;

option java_outer_classname = "RemoteDataStoreProtobuf";

import "search_types.proto";

message DocumentResponse {
  optional bytes key = 1;
  optional bytes value = 2;
  optional string tag = 3;
}

// KVStore requests
message GetRequest { // KVStore.get(K key) and KVStore.get(List<K> keys)
  required string storeId = 1;
  repeated bytes keys = 2;
}

message GetResponse {
  repeated DocumentResponse documents = 1;
}

message ContainsRequest {
  required string storeId = 1;
  required bytes key = 2;
}

message ContainsResponse {
  required bool contains = 1;
}

message FindRequest { // KVStore.find(FindByRange<K> find) and KVStore.find()
  required string storeId = 1;
  optional bytes start = 2;
  optional bytes end = 3;
  optional bool includeStart = 4 [default = false];
  optional bool includeEnd = 5 [default = false];
}

message FindResponse {
  repeated DocumentResponse documents = 1;
}

enum PutOptionType {
  VERSION = 1;
  CREATE = 2;
  REMOTE_INDEX = 3;
}

message PutOptionInfo {
  optional PutOptionType type = 1;
  optional string parameter = 2;
  repeated PutRequestIndexField indexFields = 3;
}

enum PutRequestIndexKeyValueType {
  INTEGER = 1;
  DOUBLE = 2;
  LONG = 3;
  STRING = 4;
}

message PutRequestIndexKey {
  required string shortName = 1;
  required string indexFieldName = 2;
  required PutRequestIndexKeyValueType valueType = 3;
  optional SearchFieldSorting.FieldType sortingValueType = 4;
  required bool stored = 5;
  required bool canContainMultipleValues = 6;
}

message PutRequestIndexField {
  required PutRequestIndexKey key = 1;
  repeated double valueDouble = 2;
  repeated int32 valueInt32 = 3;
  repeated int64 valueInt64 = 4;
  repeated string valueString = 5;
  repeated bytes valueBytes = 6;
}

message PutRequest {
  required string storeId = 1;
  required bytes key = 2;
  required bytes value = 3; // value can not be null
  optional PutOptionInfo optionInfo = 4;
  repeated PutRequestIndexField indexFields = 5;
}

message PutResponse {
  optional string tag = 1; // for occ store
  optional bool concurrentModificationError = 2; // occ update operation
  optional string errorMessage = 3;
}

message DeleteRequest {
  required string storeId = 1;
  required bytes key = 2;
  optional string tag = 3;
}

message DeleteResponse {
  optional string concurrentModificationError = 1; // occ update operation
}

// IndexedStore requests
message SearchRequest { // IndexedStore.find(FindByCondition find);
  required string storeId = 1;
  required SearchQuery query = 2; // query
  required int32 pageSize = 3;
  required int32 offset = 4;
  required int32 limit = 5;
  repeated SearchFieldSorting sort = 6;
}

message SearchResponse {
  repeated DocumentResponse documents = 1;
}

message GetCountsRequest { // IndexedStore.getCounts(Query... conditions);
  required string storeId = 1;
  repeated SearchQuery queries = 2;
}

message GetCountsResponse {
  repeated int32 counts = 1;
}

// KVStoreProvider request
message GetStoreRequest {
  required string name = 1;
}

message GetStoreResponse {
  required string storeId = 1;
}

